# xtensor-cpp-cookiecutter

./: .appveyor.yml  .travis.yml  LICENSE  README.md  cookiecutter.json
{{cookiecutter.github_project_name}}/: CMakeLists.txt  README.md
{{cookiecutter.github_project_name}}/include/{{cookiecutter.cpp_root_folder_name}}/: {{ cookiecutter.package_name }}.hpp
{{cookiecutter.github_project_name}}/src/: CMakeLists.txt
{{cookiecutter.github_project_name}}/src/docs/: CMakeLists.txt
{{cookiecutter.github_project_name}}/src/docs/doxygen_doc/: CMakeLists.txt  Doxyfile.in  Doxyfile_xml.in
{{cookiecutter.github_project_name}}/src/docs/doxygen_doc/include/: mainpage.dox
{{cookiecutter.github_project_name}}/src/examples/: CMakeLists.txt  example_2.cpp
{{cookiecutter.github_project_name}}/src/tests/: CMakeLists.txt  test_{{ cookiecutter.package_name }}_a.cpp
